DERBY-5639: Minor code cleanup for NetServlet
Added basic protection against XSS.

Patch file: derby-5639-4a-xss.diff


git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1308297 13f79535-47bb-0310-9956-ffa450edef68